--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,52 @@ html, body
   padding-bottom: 10px;
 }
 
+.crew-button
+{
+  text-align: center;
+  font-family: "comforta-medium";
+  width: 84px;
+  margin-left: 36px;
+  margin-right: 36px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border: none;
+  color: #f9f9f9;
+  background-color: black;
+  transition: all .25s ease-in-out;
+}
+
+.crew-button:hover
+{
+  text-align: center;
+  font-family: "comforta-medium";
+  width: 84px;
+  margin-left: 36px;
+  margin-right: 36px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border: none;
+  color: #ffbf00;
+  background-color: black;
+  
+}
+
+.crew-sheet-music-container
+{
+  padding: 8px 8px 8px 8px;
+  border-radius: 8px;
+  position: relative;
+  width: 75%;
+  height: 460px;
+  margin: auto;
+  margin-bottom: 36px;
+  background-color: #f9f9f9;
+}
+
 .trailer-button
 {
   cursor: pointer;
@@ -215,7 +261,7 @@ html, body
   padding-top: 20px;
   margin: auto;
   border-radius: 6px;
-  width: 92%;
+  width: 75%;
   height: 420px;
   color: black;
   background-color: #f9f9f9;
@@ -269,15 +315,20 @@ html, body
   background-color: #f9f9f9;
 }
 
+.spacer
+{
+  height: 20px;
+}
+
 .sheet-music-line-long
 {
 
-  width: 70%;
-  height:2px;
+  width: 100%;
+  height:3px;
   background-color: black;
   margin: auto;
-  margin-bottom: 3px;
-  margin-top: 3px ;
+  margin-bottom: 12px;
+  margin-top: 12px ;
 }
 
 .sheet-music-line-short
