--- a/styles.css
+++ b/styles.css
@@ -270,15 +270,51 @@ html, body
 /* header */
 .treble
 {
-  top: -5px;
+  top: 0px;
   position: absolute;
   left: 3%;
   height: 120px;
   width: 120px;
 }
 
+.sharp
+{
+  display: none;
+}
+
+.vertical-line-1
+{
+  top: 16px;
+  position: absolute;
+  right: 16px;
+  height: 80px;
+  width: 6px;
+  background-color: black;
+}
+
+.vertical-line-2
+{
+  top: 16px;
+  position: absolute;
+  right: 28px;
+  height: 80px;
+  width: 2px;
+  background-color: black;
+}
+
+.vertical-line-3
+{
+  top: 16px;
+  position: absolute;
+  left: 14px;
+  height: 80px;
+  width: 2px;
+  background-color: black;
+}
+
 .top .sheet-music-button
 {
+  height: 20px;
   cursor: pointer;
   font-family: "montserrat-regular", sans-serif;
   font-size: 18px;
@@ -292,6 +328,7 @@ html, body
 
 .top .sheet-music-button:hover
 {
+  height: 20px;
   cursor: pointer;
   font-family: "montserrat-regular", sans-serif;
   font-size: 18px;
@@ -305,11 +342,11 @@ html, body
 
 .top .sheet-music-container
 {
-  padding: 8px 8px 8px 8px;
+  padding: 8px 16px 8px 16px;
   border-radius: 8px;
   position: relative;
   width: 75%;
-  height: 105px;
+  height: 112px;
   margin: auto;
   margin-top: 15px;
   background-color: #f9f9f9;
@@ -350,8 +387,8 @@ html, body
   height:3px;
   background-color: black;
   margin: auto;
-  margin-bottom: 7px;
-  margin-top: 7px ;
+  margin-bottom: 8px;
+  margin-top: 8px ;
 }
 
 .top .sheet-music-line-short
@@ -363,8 +400,8 @@ html, body
   height: 3px;
   background-color: black;
   margin: auto;
-  margin-bottom: 7px;
-  margin-top: 7px ;
+  margin-bottom: 8px;
+  margin-top: 8px ;
 }
 
 /* slant */
@@ -445,3 +482,164 @@ html, body
   background: black;
 }
 
+.hideme
+{
+  opacity: 0;
+}
+
+@media only screen and (max-width: 720px) 
+{
+  .treble
+  {
+    top: 0px;
+    position: absolute;
+    left: -2.5%;
+    height: 120px;
+    width: 120px;
+  }
+
+  .top .sheet-music-line-short
+  {
+    float: left;
+    display: block;
+    z-index: 2;
+    width: 12.5%;
+    height: 3px;
+    background-color: black;
+    margin: auto;
+    margin-bottom: 8px;
+    margin-top: 8px ;
+  }
+
+  .top .sheet-music-button
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 18px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    background-color: #f9f9f9;
+    transition: all .25s ease-in-out;
+  }
+
+  .top .sheet-music-button:hover
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 18px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    color: #ffbf00;
+    background-color: #f9f9f9;
+  }
+
+  .top .sheet-music-container
+  {
+    padding: 8px 16px 8px 16px;
+    border-radius: 8px;
+    position: relative;
+    width: 100%;
+    height: 112px;
+    margin: auto;
+    margin-top: 15px;
+    background-color: #f9f9f9;
+  }
+}
+
+/* pretty small phones */
+@media only screen and (max-width: 500px) 
+{
+  .treble
+  {
+    top: 0px;
+    position: absolute;
+    left: -7.4%;
+    height: 120px;
+    width: 120px;
+  }
+
+  .top .sheet-music-button
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 12px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    background-color: #f9f9f9;
+    transition: all .25s ease-in-out;
+  }
+
+  .top .sheet-music-button:hover
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 12px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    color: #ffbf00;
+    background-color: #f9f9f9;
+  }
+}
+
+
+/* iphone 5 type optimization */
+@media only screen and (max-width: 370px) 
+{
+  .treble
+  {
+    display: none;
+  }
+
+  .sharp
+  {
+    display: block;
+    top: 31px;
+    position: absolute;
+    left: 3.2%;
+    height: 50px;
+    width: 50px;
+  }
+
+  .top .sheet-music-button
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 10px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    background-color: #f9f9f9;
+    transition: all .25s ease-in-out;
+    z-index: 5;
+  }
+
+  .top .sheet-music-button:hover
+  {
+    height: 20px;
+    cursor: pointer;
+    font-family: "montserrat-regular", sans-serif;
+    font-size: 10px;
+    display: block;
+    float: left;
+    width: 18.75%;
+    border: none;
+    color: #ffbf00;
+    background-color: #f9f9f9;
+    z-index: 5;
+  }
+
+}
