--- a/styles.css
+++ b/styles.css
@@ -162,10 +162,8 @@ html, body
   text-align: center;
   font-family: "comforta-medium";
   width: 84px;
-  margin-left: 36px;
-  margin-right: 36px;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 3%;
+  margin-right: 3%;
   padding-top: 4px;
   padding-bottom: 4px;
   border: none;
@@ -179,16 +177,13 @@ html, body
   text-align: center;
   font-family: "comforta-medium";
   width: 84px;
-  margin-left: 36px;
-  margin-right: 36px;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 3%;
+  margin-right: 3%;
   padding-top: 4px;
   padding-bottom: 4px;
   border: none;
-  color: #ffbf00;
+  color: #ecc03d;
   background-color: black;
-  
 }
 
 .crew-sheet-music-container
@@ -196,7 +191,7 @@ html, body
   padding: 8px 8px 8px 8px;
   border-radius: 8px;
   position: relative;
-  width: 75%;
+  width: 90%;
   height: 460px;
   margin: auto;
   margin-bottom: 36px;
@@ -231,7 +226,7 @@ html, body
   height: 32px;
   width: 86px;
   background-color: #f9f9f9;
-  color: #ffbf00;
+  color: #ecc03d;
   text-align: center;
   vertical-align: middle;
   margin: auto;
@@ -260,8 +255,9 @@ html, body
 {
   padding-top: 20px;
   margin: auto;
+  margin-bottom: 20px;
   border-radius: 6px;
-  width: 75%;
+  width: 90%;
   height: 420px;
   color: black;
   background-color: #f9f9f9;
@@ -336,7 +332,7 @@ html, body
   float: left;
   width: 15%;
   border: none;
-  color: #ffbf00;
+  color: #ecc03d;
   background-color: #f9f9f9;
 }
 
@@ -411,7 +407,7 @@ html, body
 }
 .slant {
   position: relative;
-  background: #ffbf00;
+  background: #ecc03d;
   color: #fff;
   text-align: center;
 }
@@ -420,7 +416,7 @@ html, body
   content:'';
 }
 .slant.diagonal {
-  background: #ffbf00;
+  background: #ecc03d;
 }
 .diagonal:before {
   -webkit-transform: rotate(-3deg);
@@ -435,13 +431,50 @@ html, body
   background: inherit;
 }
 
+/* slant */
+.first-diagonal {
+  z-index: 1;
+  padding: 3em;
+}
+.first-slant {
+  position: relative;
+  background: #ecc03d;
+  color: #fff;
+  text-align: center;
+}
+.first-slant:before {
+  position: absolute;
+  content:'';
+}
+.first-slant.first-diagonal {
+
+}
+.first-diagonal:before {
+  -webkit-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+  -webkit-transform-origin: 3% 0;
+  transform-origin: 0% 0%;
+  top: 0;
+  left: -10%;
+  z-index: -1;
+  width: 120%;
+  height: 75%;
+  background-image: url(assets/overlay.png);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+
+
+/*-------------------------*/
 .other-diagonal {
   z-index: 1;
   padding: 1em;
 }
 .other-slant {
   position: relative;
-  background: #ffbf00;
+  background: #ecc03d;
   color: #fff;
   text-align: center;
   
@@ -451,7 +484,7 @@ html, body
   content:'';
 }
 .other-slant.other-diagonal {
-  background: #ffbf00;
+  background: #ecc03d;
 }
 .other-diagonal:before
 {
@@ -487,8 +520,66 @@ html, body
   opacity: 0;
 }
 
+@media only screen and (max-width: 840px)
+{
+  .crew-button
+  {
+    text-align: center;
+    font-family: "comforta-medium";
+    width: 84px;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border: none;
+    color: #f9f9f9;
+    background-color: black;
+    transition: all .25s ease-in-out;
+  }
+
+  .crew-button:hover
+  {
+    text-align: center;
+    font-family: "comforta-medium";
+    width: 84px;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border: none;
+    color: #ecc03d;
+    background-color: black;
+  }
+}
+
+
 @media only screen and (max-width: 720px) 
 {
+
+  .crew-sheet-music-container
+  {
+    padding: 8px 8px 8px 8px;
+    border-radius: 8px;
+    position: relative;
+    width: 100%;
+    height: 460px;
+    margin: auto;
+    margin-bottom: 36px;
+    background-color: #f9f9f9;
+  }
+
+  .trailer-container
+  {
+    padding-top: 20px;
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    width: 100%;
+    height: 420px;
+    color: black;
+    background-color: #f9f9f9;
+  }
+
   .treble
   {
     top: 0px;
@@ -535,7 +626,7 @@ html, body
     float: left;
     width: 18.75%;
     border: none;
-    color: #ffbf00;
+    color: #ecc03d;
     background-color: #f9f9f9;
   }
 
@@ -588,7 +679,7 @@ html, body
     float: left;
     width: 18.75%;
     border: none;
-    color: #ffbf00;
+    color: #ecc03d;
     background-color: #f9f9f9;
   }
 }
@@ -637,7 +728,7 @@ html, body
     float: left;
     width: 18.75%;
     border: none;
-    color: #ffbf00;
+    color: #ecc03d;
     background-color: #f9f9f9;
     z-index: 5;
   }
